--- a/src/pages/references/[reference].astro
+++ b/src/pages/references/[reference].astro
@@ -1,10 +1,11 @@
 ---
+import type { Reference } from '@/types/contenttypes';
 import ReferencePage from '@/components/ReferencePage.svelte';
 import StarlightPage from '@astrojs/starlight/components/StarlightPage.astro';
 
 export async function getStaticPaths() {
     
-    let references: { title: string, slug: string, content: string }[] = [
+    let references: Array<Reference> = [
         { title: 'Reference 1', slug: 'reference-1', content: 'Reference 1 content goes here...' },
         { title: 'Reference 2', slug: 'reference-2', content: 'Reference 2 content goes here...' },
         { title: 'Reference 3', slug: 'reference-3', content: 'Reference 3 content goes here...' },
